--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <Reference Include="KeePass">
-      <HintPath>..\..\..\DLL Projects\KeePass\KeePass.exe</HintPath>
+      <HintPath>..\Utility.KeePass\ref\KeePass.exe</HintPath>
     </Reference>
   </ItemGroup>
 
