--- a/Utility.KeePass/Utility.KeePass.csproj
+++ b/Utility.KeePass/Utility.KeePass.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net451;net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
-    <Version>0.0.4</Version>
+    <Version>0.0.5</Version>
     <Authors>Andy Woodward</Authors>
     <Company>Woodward Coding Solutions</Company>
     <Description>Allows you to read data from a KeePass db file.</Description>
@@ -13,7 +13,18 @@
 
   <ItemGroup>
     <Reference Include="KeePass">
-      <HintPath>..\..\..\DLL Projects\KeePass\KeePass.exe</HintPath>
+      <HintPath>..\Utility.KeePass\ref\KeePass.exe</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ref\KeePass.exe">
+      <Pack>True</Pack>
+      <PackagePath>lib\$(TargetFrameworkVersion)\</PackagePath>
+    </None>
+    <None Include="ref\KeePass.exe.config">
+      <Pack>True</Pack>
+      <PackagePath>lib\$(TargetFrameworkVersion)\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
